# vrchat-voice-agent

./: .gitignore  README.md  launch_gui.bat  pyproject.toml
.github/workflows/: ci.yml
config/: settings.example.toml
docs/: architecture.md
tests/: test_config.py  test_runtime.py  test_services.py  test_simple_toml.py  test_stt.py
vrchat_ai_tool/: __init__.py  audio.py  cli.py  config.py  gui.py  runtime.py  services.py  simple_toml.py  stt.py
