[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vrchat-ai-tool"
version = "0.1.0"
description = "Local voice-only VRChat assistant scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Haritan" }
]
dependencies = []

[project.optional-dependencies]
stt = [
  "faster-whisper",
]

[project.scripts]
vrchat-ai-tool = "vrchat_ai_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vrchat_ai_tool"]

[tool.ruff]
line-length = 100
target-version = "py310"
